@@ -5,7 +5,41 @@
   <groupId>com.inovision</groupId>
   <artifactId>JavaSamples</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
+                        <!--
+                        <arg>add-exports</arg><arg>java.xml/com.sun.org.apache.xerces.internal.impl.dtd=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.xml/com.sun.org.apache.xerces.internal.xni.parser=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.net.www.protocol.http=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>jdk.unsupported/sun.misc=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.security.ssl=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.net.util=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.security.internal.interfaces=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.security.provider.certpath=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.security.internal.spec=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.security.validator=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.security.action=ALL-UNNAMED</arg>
+                    <arg>add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
+                        -->
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <packaging>jar</packaging>
 
   <name>JavaSamples</name>
   <url>http://maven.apache.org</url>
@@ -58,7 +92,6 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.1</version>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
